little refactoring in progress
