# project/doc/swagger.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.0.1
 info:
   title: PDF-PHP API
   description: Eine Schnittstellendokumentation für das PDF-PHP Projekt
@@ -22,3 +22,77 @@ paths:
                 type: array
                 items:
                   type: string
+
+  /v1/json/document:
+    post:
+      summary: PDF generate
+      description: Generiert ein PDF auf Basis des gegebenen Templates
+      requestBody:
+        description: Das PDF-template, welches die Vorlage, für das PDF ist.
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PdfTemplate'
+      responses:
+        '200':
+          description: A giant PDF string
+          content:
+            application/json:
+              schema:
+                type: string
+components:
+  schemas:
+    PdfTemplate:
+      required:
+        - author
+        - filename
+      type: object
+      properties:
+        author:
+          type: string
+          description: Der Author von der PDF Datei.
+          example: Ruwen Katschek
+        pages:
+          type: array
+          items:
+            $ref: '#/components/schemas/Page'
+        filename:
+          type: string
+          description: PDF File name
+          example: rechnung.pdf
+    Page:
+      type: object
+      properties:
+        elements:
+          type: array
+          items:
+            $ref: '#/components/schemas/elements'
+    elements:
+      type: array
+      items:
+        $ref: '#/components/schemas/PageElement'
+    PageElement:
+      type: object
+      properties:
+        cellWidth:
+          type: integer
+          description: Die Höhe einer Zelle
+          example: 12
+        cellHeight:
+          type: integer
+          description: Die Breite einer Zelle
+          example: 23
+        cellXPosition:
+          type: integer
+          description: Die X Position der Zelle
+          example: 12
+        cellYPosition:
+          type: integer
+          description: Die Y Position der Zelle
+          example: 12
+        elementName:
+          type: string
+          description: Der Name des Elements
+        value:
+          type: string
+          description: Der Wert des Elements (Achtung, der Wert wird dann statisch gesetzt)
